🐛 [MOOV-2078]: Fixed payment method icons being covered only on iOS

--- a/apps/business/src/globals.css
+++ b/apps/business/src/globals.css
@@ -5,3 +5,7 @@
 html {
   scrollbar-gutter: auto !important;
 }
+
+html, body, div#root {
+  height: 100%;
+}
